ignore Gemfile.lock

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-/.bundle/
 /.yardoc
 /_yardoc/
 /coverage/
@@ -6,6 +5,10 @@
 /pkg/
 /spec/reports/
 /tmp/
+
+# bundler
+/.bundle/
+Gemfile.lock
 
 # rspec failure tracking
 .rspec_status
